--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head> 
-  <title>Helo</title> 
+  <title> Hello </title>
 </head>
 
 <body>  
-  <p>Helo Worl!</p>
+  <p> Hello World! </p>
 </body>
 
 </html>
