--- a/inc/header.html
+++ b/inc/header.html
@@ -1,1 +1,13 @@
-
+<div class="header">
+	<img class="logo" src="./img/logo.jpg" title="logo" />
+	<!-- BEGIN MENU -->
+	<div class="menu">
+		<a href="./index_template.html">{MENU_1}</a>
+		
+		<span style="float:right; display:block; color:white; margin:10px;">{WELCOME}</span>
+		<a href="./login.php">{MENU_2}</a>
+		<a href="./register.php">{MENU_3}</a>
+		
+	</div>
+	<!-- END MENU -->
+</div>
