--- a/inc/header.html
+++ b/inc/header.html
@@ -2,7 +2,7 @@
 	<img class="logo" src="./img/logo.jpg" title="logo" />
 	<!-- BEGIN MENU -->
 	<div class="menu">
-		<a href="./index_template.html">{MENU_1}</a>
+		<a href="./index.php">{MENU_1}</a>
 		
 		<span style="float:right; display:block; color:white; margin:10px;">{WELCOME}</span>
 		<a href="./login.php">{MENU_2}</a>
