--- a/message_template.html
+++ b/message_template.html
@@ -17,10 +17,10 @@
 		<img class="logo" src="./img/logo.jpg" title="logo" />
 	</div>
 	
-	<div class="main, text-center" style="background-color:yellow; padding:10px; margin-top:20px; font-size:1.2em;">			
+	<div class="main, text-center, shadow" style="background-color:yellow; padding:10px; margin-top:20px; font-size:1.2em;">	
 		See you back soon!
-	</div>		
-	
+	</div>	
+
 	<footer class="row">
 		<div class="col-md-6">© Desenvolvimento de Aplicações Web 2018</div>
 		<div class="col-md-6 text-right">Designed by Aluno</div>
