--- a/message_template.html
+++ b/message_template.html
@@ -13,18 +13,15 @@
 </head>	
 
 <body class="container">
-	<div class="header">
-		<img class="logo" src="./img/logo.jpg" title="logo" />
-	</div>
+	<!-- INCLUDE inc/header.html -->
 	
-	<div class="main, text-center, shadow" style="background-color:yellow; padding:10px; margin-top:20px; font-size:1.2em;">	
-		See you back soon!
+	<!-- BEGIN MAIN -->
+	<div class="main text-center shadow" style="background-color:yellow; padding:10px; margin-top:20px; font-size:1.2em;">	
+		{MESSAGE}
 	</div>	
+	<!-- END MAIN -->
 
-	<footer class="row">
-		<div class="col-md-6">© Desenvolvimento de Aplicações Web 2018</div>
-		<div class="col-md-6 text-right">Designed by Aluno</div>
-	</footer>
+	<!-- INCLUDE inc/footer.html -->
 </body>
 
 </html>
