--- a/login_template.html
+++ b/login_template.html
@@ -41,6 +41,14 @@
 					<div class="text-center">
 						<input class="btn btn-primary" type="submit" value="Go" />
 					</div>
+					
+					<div class="form-group text-center">
+						<label for="autologin">Remember me</label>
+						<input type="checkbox" id="autologin" name="autologin" value="1">
+					</div>
+					<div class="form-group text-center">
+						<a href="password_reset.php">Forgot password?</a>
+					</div>
 				</form>
 				<!-- END FORM-LOGIN -->
 			</div>
