--- a/password_reset_template.html
+++ b/password_reset_template.html
@@ -2,7 +2,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="refresh" content="5;url=./index.php" />
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -15,12 +14,23 @@
 <body class="container">
 	<!-- INCLUDE inc/header.html -->
 	
-	<!-- BEGIN MAIN -->
-	<div class="main text-center shadow" style="background-color:yellow; padding:10px; margin-top:20px; font-size:1.2em;">	
+	<div class="main text-center shadow" style="padding:10px;">	
+		<h1 class="text-center">Password reset</h1>
+		<!-- BEGIN FORM-MESSAGE -->
 		{MESSAGE}
+		<!-- END FORM-MESSAGE -->
+		<form action="./password_reset_action.php" method="post">
+			<div class="form-group text-left">
+				<label>E-mail</label>:
+				<input class="form-control" type="text" name="email" value="" />
+			</div>
+			
+			<div class="text-center">
+				<input class="btn btn-primary" type="submit" value="Go" />
+			</div>
+		</form>
 	</div>	
-	<!-- END MAIN -->
-
+	
 	<!-- INCLUDE inc/footer.html -->
 </body>
 
