--- a/new_password_template.html
+++ b/new_password_template.html
@@ -22,7 +22,7 @@
 		
 		<!-- BEGIN FORM-NEW-PASSWORD -->
 		<form action="./new_password_action.php" method="post">
-			<input type=hidden name="token" value="{TOKEN}">
+			<input type="hidden" name="token" value="{TOKEN}">
 			
 			<div class="text-left">
 				<div class="form-group">
